5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1649_2711.log
== TEST (2019-04-05 20:46:28) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passes_onibus
if(valor_disponivel > valor_total_ticket) :
	if(valor_disponivel > valor_total_onibus) :
		print("SUFICIENTE")
	else :
		print("INSUFICIENTE")
else :
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_total_passe = valor_passes * qtd_passes_onibus
NameError: name 'qtd_passes_onibus' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:47:13) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket) :
	if(valor_disponivel > valor_total_onibus) :
		print("SUFICIENTE")
	else :
		print("INSUFICIENTE")
else :
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(valor_disponivel > valor_total_onibus) :
NameError: name 'valor_total_onibus' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:47:28) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket) :
	if(valor_disponivel > valor_total_onibus) :
		print("SUFICIENTE")
	else :
		print("INSUFICIENTE")
else :
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.192003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2711/main.py", line 10, in <module>
    if(valor_disponivel > valor_total_onibus) :
NameError: name 'valor_total_onibus' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:47:47) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket) :
	if(valor_disponivel > valor_total_onibus) :
		print("SUFICIENTE")
	else :
		print("INSUFICIENTE")
else :
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(valor_disponivel > valor_total_onibus) :
NameError: name 'valor_total_onibus' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:48:17) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket) :
	if(valor_disponivel > valor_total_passe) :
		print("SUFICIENTE")
	else :
		print("INSUFICIENTE")
else :
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.213944
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
valor disponivel: quantidade de tickets: valor do ticket quantidade dos passes: valor do passe: SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:48:20) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket) :
	if(valor_disponivel > valor_total_passe) :
		print("SUFICIENTE")
	else :
		print("INSUFICIENTE")
else :
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:50:13) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket + valor_total_passe) :
	print("SUFICIENTE")
else :
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.203507
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:01:16) 
-- CODE:
valor_disponivel = float(input("valor disponivel: "))
qtd_tickets = int(input("quantidade de tickets: "))
valor_ticket = float(input("valor do ticket "))
qtd_passe_onibus = int(input("quantidade dos passes: "))
valor_passes = float(input("valor do passe: "))

valor_total_ticket = valor_ticket * qtd_tickets
valor_total_passe = valor_passes * qtd_passe_onibus
if(valor_disponivel > valor_total_ticket + valor_total_passe) :
	print("SUFICIENTE")
else :
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.158982
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
